--- a/src/srvman.vcxproj
+++ b/src/srvman.vcxproj
@@ -82,7 +82,7 @@
     <OutDir>$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(Platform)\$(Configuration)\</IntDir>
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>c:\Dev\re\Scylla-master\WTL\Include;$(IncludePath)</IncludePath>
+    <IncludePath>$(WTLDIR);$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Midl>
